{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 124,
  "lineage": "2206dc92-431b-d22a-238e-24fba6ba75e8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "web",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:909371103522:loadbalancer/nginx-elb",
            "availability_zones": [
              "us-east-2a",
              "us-east-2b"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "dns_name": "nginx-elb-622090998.us-east-2.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 10,
                "interval": 30,
                "target": "TCP:80",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "nginx-elb",
            "idle_timeout": 60,
            "instances": [
              "i-0ca187d12ce9d5c32",
              "i-0d12f8a68df407497"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "nginx-elb",
            "security_groups": [
              "sg-02441c0f908e4e7b9"
            ],
            "source_security_group": "909371103522/nginx_elb_sg",
            "source_security_group_id": "sg-02441c0f908e4e7b9",
            "subnets": [
              "subnet-02b362b1f312779a9",
              "subnet-0ddb6a39c4d39611b"
            ],
            "tags": {
              "BillingCode": "ACCT8675309",
              "Environment": "dev",
              "Name": "dev-elb"
            },
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "aws_instance.nginx1",
            "aws_instance.nginx2",
            "aws_security_group.elb-sg",
            "aws_subnet.subnet1",
            "aws_subnet.subnet2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nginx1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0bdcc6c05dec346bf",
            "arn": "arn:aws:ec2:us-east-2:909371103522:instance/i-0d12f8a68df407497",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "nginx_profile",
            "id": "i-0d12f8a68df407497",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Pluralsight",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-080cf788140070835",
            "private_dns": "ip-10-1-0-177.us-east-2.compute.internal",
            "private_ip": "10.1.0.177",
            "public_ip": "18.216.228.175",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-07d5d6c8948f0e872",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02b362b1f312779a9",
            "tags": {
              "BillingCode": "ACCT8675309",
              "Environment": "dev",
              "Name": "dev-nginx1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0d18d7cba070314a3"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.nginx_profile",
            "aws_s3_bucket.web_bucket",
            "aws_security_group.nginx-sg",
            "aws_subnet.subnet1",
            "random_integer.rand"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nginx2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0bdcc6c05dec346bf",
            "arn": "arn:aws:ec2:us-east-2:909371103522:instance/i-0ca187d12ce9d5c32",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "nginx_profile",
            "id": "i-0ca187d12ce9d5c32",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Pluralsight",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-099ee1a7b333d1a3a",
            "private_dns": "ip-10-1-1-22.us-east-2.compute.internal",
            "private_ip": "10.1.1.22",
            "public_ip": "3.135.231.209",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-061060630adc81177",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ddb6a39c4d39611b",
            "tags": {
              "BillingCode": "ACCT8675309",
              "Environment": "dev",
              "Name": "dev-nginx2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0d18d7cba070314a3"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.nginx_profile",
            "aws_s3_bucket.web_bucket",
            "aws_security_group.nginx-sg",
            "aws_subnet.subnet2",
            "random_integer.rand"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:909371103522:internet-gateway/igw-025ad8cc772a47123",
            "id": "igw-025ad8cc772a47123",
            "owner_id": "909371103522",
            "tags": {
              "BillingCode": "ACCT8675309",
              "Environment": "dev",
              "Name": "dev-igw"
            },
            "vpc_id": "vpc-0e5de9d5df17b6e68"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-01112040ea1ef0484",
            "owner_id": "909371103522",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-025ad8cc772a47123",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "BillingCode": "ACCT8675309",
              "Environment": "dev",
              "Name": "dev-rtb"
            },
            "vpc_id": "vpc-0e5de9d5df17b6e68"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta-subnet1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d5503a13278271a5",
            "route_table_id": "rtb-01112040ea1ef0484",
            "subnet_id": "subnet-02b362b1f312779a9"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rtb",
            "aws_subnet.subnet1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta-subnet2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b95ed1cdabe44e2a",
            "route_table_id": "rtb-01112040ea1ef0484",
            "subnet_id": "subnet-0ddb6a39c4d39611b"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rtb",
            "aws_subnet.subnet2",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elb-sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:909371103522:security-group/sg-02441c0f908e4e7b9",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02441c0f908e4e7b9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "nginx_elb_sg",
            "name_prefix": null,
            "owner_id": "909371103522",
            "revoke_rules_on_delete": false,
            "tags": {
              "BillingCode": "ACCT8675309",
              "Environment": "dev",
              "Name": "dev-elb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e5de9d5df17b6e68"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nginx-sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:909371103522:security-group/sg-0d18d7cba070314a3",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d18d7cba070314a3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.1.0.0/16"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "nginx_sg",
            "name_prefix": null,
            "owner_id": "909371103522",
            "revoke_rules_on_delete": false,
            "tags": {
              "BillingCode": "ACCT8675309",
              "Environment": "dev",
              "Name": "dev-nginx"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e5de9d5df17b6e68"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:909371103522:subnet/subnet-02b362b1f312779a9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.1.0.0/24",
            "id": "subnet-02b362b1f312779a9",
            "map_public_ip_on_launch": true,
            "owner_id": "909371103522",
            "tags": {
              "BillingCode": "ACCT8675309",
              "Environment": "dev",
              "Name": "dev-subnet1"
            },
            "vpc_id": "vpc-0e5de9d5df17b6e68"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:909371103522:subnet/subnet-0ddb6a39c4d39611b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.1.1.0/24",
            "id": "subnet-0ddb6a39c4d39611b",
            "map_public_ip_on_launch": true,
            "owner_id": "909371103522",
            "tags": {
              "BillingCode": "ACCT8675309",
              "Environment": "dev",
              "Name": "dev-subnet2"
            },
            "vpc_id": "vpc-0e5de9d5df17b6e68"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:909371103522:vpc/vpc-0e5de9d5df17b6e68",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0a76ee9c0e57a6c61",
            "default_route_table_id": "rtb-09f883f3d94aaa70c",
            "default_security_group_id": "sg-0602a4cee06950bc6",
            "dhcp_options_id": "dopt-f5508e9e",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0e5de9d5df17b6e68",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-09f883f3d94aaa70c",
            "owner_id": "909371103522",
            "tags": {
              "BillingCode": "ACCT8675309",
              "Environment": "dev",
              "Name": "dev-vpc"
            }
          }
        }
      ]
    }
  ]
}